# 8-bit-converter

./: ATTRIBUTIONS.md  README.md  mainwindow.ui  pyproject.toml  requirements.txt
input/: input.md
src/: cli.py  convertion_utils.py  core.py  event_min_heap.py  event_red_black_tree.py  frame_min_heap.py  frame_red_black_tree.py  gui.py  main.py  main_window.py  mainwindow.ui  test.py
