[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "8-bit-converter"
version = "0.1.0"
authors = [
    { name="Mingyu Sun", email="mingyusun_23@outlook.com" },
]
description = "Convert a given audio file to an 8-bit-style rendition."
readme = "README.md"
requires-python = ">= 3.10, < 3.12"

[project.scripts]
"8_bit_CLI" = "cli:run_cli" # CLI Entry Point
"8_bit_GUI" = "gui:run_gui" # GUI Entry Point